# Ethernet-Parameters

./: CMakeLists.txt  README.md  examples.cpp
IPv4Address/: CMakeLists.txt  IPv4Address.cpp  IPv4Address.hpp
IPv6Address/: CMakeLists.txt  IPv6Address.cpp  IPv6Address.hpp
Tests/: CMakeLists.txt  IPv4Tests.cpp  Tests.cpp
Tests/IPv4Tests/: CMakeLists.txt  IPv4Tests.cpp
Tests/IPv6Tests/: CMakeLists.txt  IPv6Tests.cpp
